--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,11 @@ spring:
         username: root
         password: password
         driver-class-name: com.mysql.cj.jdbc.Driver
-
+    tomcat:
+        max-wait: 20000
+        max-active: 50
+        max-idle: 20
+        min-idle: 15
     jpa:
        # open-in-view: false
         hibernate:
@@ -14,6 +18,9 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL5Dialect
+                format_sql: true
+                    id:
+                        new_generator_mappings: false
 
 #---
 #
