--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-		<!--<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
-		<!--<start-class>murraco.JwtAuthServiceApp</start-class>-->
 	</properties>
 
 	<dependencies>
@@ -43,17 +40,17 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<!-- Starter for using Spring Security -->
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<!-- Make method based security testing easier -->
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		<!--<dependency>-->
+			 <!--&lt;!&ndash;Starter for using Spring Security&ndash;&gt;-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--&lt;!&ndash; Make method based security testing easier &ndash;&gt;-->
+			<!--<groupId>org.springframework.security</groupId>-->
+			<!--<artifactId>spring-security-test</artifactId>-->
+			<!--<scope>test</scope>-->
+		<!--</dependency>-->
 		<!--<dependency>-->
 			<!--<groupId>com.h2database</groupId>-->
 			<!--<artifactId>h2</artifactId>-->
@@ -80,18 +77,18 @@
 			<version>2.23.4</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<!-- JSON Web Token Support -->
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.7.0</version>
-		</dependency>
-		<dependency>
-			<!-- Model Mapper -->
-			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--&lt;!&ndash; JSON Web Token Support &ndash;&gt;-->
+			<!--<groupId>io.jsonwebtoken</groupId>-->
+			<!--<artifactId>jjwt</artifactId>-->
+			<!--<version>0.7.0</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--&lt;!&ndash; Model Mapper &ndash;&gt;-->
+			<!--<groupId>org.modelmapper</groupId>-->
+			<!--<artifactId>modelmapper</artifactId>-->
+			<!--<version>1.1.0</version>-->
+		<!--</dependency>-->
 	</dependencies>
 	<repositories>
 		<repository>
